Updated for styles

--- a/views/changelog.ejs
+++ b/views/changelog.ejs
@@ -1,7 +1,7 @@
 <% layout("layouts/boilerplate") -%>
-
+<link rel="stylesheet" href="/stylesheets/changelogStyles.css">
 <h1 class="lead fs-1 mb-2">Potion Chain Changelog</h1>
-<h2 class="lead fs-2">V.1.0.</h2>
-<ul>
+<h2 class="lead fs-2">V.1.0</h2>
+<ul class="changes">
     <li>Deployed to heroku.</li>
 </ul>
