--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,115 +44,117 @@
                 </button>
             </div>
         </form>
-        <h3 class="lead fs-3 mt-5">Come here often?</h3>
-        <p>Here are some abbreviated search terms for common potions you can use:</p>
-        <details class="shorthand mb-2">
-            <summary class="shorthand-label">Supers</summary>
+        <section id="shorthands">
+            <h3 class="lead fs-3 mt-5">Come here often?</h3>
+            <p>Here are some abbreviated search terms for common potions you can use:</p>
             <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Super attack (3)</summary>
-                <summary class="nested-shorthand-item">sa</summary>
-                <summary class="nested-shorthand-item">supa</summary>
-                <summary class="nested-shorthand-item">supatt</summary>
-                <summary class="nested-shorthand-item">super attack</summary>
+                <summary class="shorthand-label">Supers</summary>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Super attack (3)</summary>
+                    <summary class="nested-shorthand-item">sa</summary>
+                    <summary class="nested-shorthand-item">supa</summary>
+                    <summary class="nested-shorthand-item">supatt</summary>
+                    <summary class="nested-shorthand-item">super attack</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Super strength (3)</summary>
+                    <summary class="nested-shorthand-item ">ss</summary>
+                    <summary class="nested-shorthand-item">sups</summary>
+                    <summary class="nested-shorthand-item">supstr</summary>
+                    <summary class="nested-shorthand-item">super strength</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Super defence (3)</summary>
+                    <summary class="nested-shorthand-item">sd</summary>
+                    <summary class="nested-shorthand-item">supd</summary>
+                    <summary class="nested-shorthand-item">supdef</summary>
+                    <summary class="nested-shorthand-item">super defence</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Super ranging potion (3)</summary>
+                    <summary class="nested-shorthand-item">sr</summary>
+                    <summary class="nested-shorthand-item">supr</summary>
+                    <summary class="nested-shorthand-item">suprng</summary>
+                    <summary class="nested-shorthand-item">super ranging</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Super magic potion (3)</summary>
+                    <summary class="nested-shorthand-item">sm</summary>
+                    <summary class="nested-shorthand-item">supm</summary>
+                    <summary class="nested-shorthand-item">supmag</summary>
+                    <summary class="nested-shorthand-item">super magic</summary>
+                </details>
             </details>
             <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Super strength (3)</summary>
-                <summary class="nested-shorthand-item ">ss</summary>
-                <summary class="nested-shorthand-item">sups</summary>
-                <summary class="nested-shorthand-item">supstr</summary>
-                <summary class="nested-shorthand-item">super strength</summary>
+                <summary class="shorthand-label">Extremes</summary>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Extreme attack (3)</summary>
+                    <summary class="nested-shorthand-item">ea</summary>
+                    <summary class="nested-shorthand-item">exatt</summary>
+                    <summary class="nested-shorthand-item">exremea</summary>
+                    <summary class="nested-shorthand-item">extreme attack</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Extreme strength (3)</summary>
+                    <summary class="nested-shorthand-item ">es</summary>
+                    <summary class="nested-shorthand-item">exstr</summary>
+                    <summary class="nested-shorthand-item">exremes</summary>
+                    <summary class="nested-shorthand-item">extreme strength</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Extreme defence (3)</summary>
+                    <summary class="nested-shorthand-item">ed</summary>
+                    <summary class="nested-shorthand-item">exdef</summary>
+                    <summary class="nested-shorthand-item">extremed</summary>
+                    <summary class="nested-shorthand-item">extreme defence</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Extreme ranging potion (3)</summary>
+                    <summary class="nested-shorthand-item">er</summary>
+                    <summary class="nested-shorthand-item">exrng</summary>
+                    <summary class="nested-shorthand-item">extremer</summary>
+                    <summary class="nested-shorthand-item">extreme ranging</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Extreme magic potion (3)</summary>
+                    <summary class="nested-shorthand-item">em</summary>
+                    <summary class="nested-shorthand-item">exmag</summary>
+                    <summary class="nested-shorthand-item">extremem</summary>
+                    <summary class="nested-shorthand-item">extreme magic</summary>
+                </details>
             </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Super defence (3)</summary>
-                <summary class="nested-shorthand-item">sd</summary>
-                <summary class="nested-shorthand-item">supd</summary>
-                <summary class="nested-shorthand-item">supdef</summary>
-                <summary class="nested-shorthand-item">super defence</summary>
+            <details>
+                <summary class="shorthand-label">Overloads</summary>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Overload (3)</summary>
+                    <summary class="nested-shorthand-item">ovl</summary>
+                    <summary class="nested-shorthand-item">overload</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Supreme overload potion (6)</summary>
+                    <summary class="nested-shorthand-item">sovl</summary>
+                    <summary class="nested-shorthand-item">supovl</summary>
+                    <summary class="nested-shorthand-item">supreme ovl</summary>
+                    <summary class="nested-shorthand-item">supreme overload</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Elder overload potion (6)</summary>
+                    <summary class="nested-shorthand-item">eovl</summary>
+                    <sumamry class="nested-shorthand-item">elder</sumamry>
+                    <summary class="nested-shorthand-item">elderovl</summary>
+                    <summary class="nested-shorthand-item">elder ovl</summary>
+                    <summary class="nested-shorthand-item">elder overload</summary>
+                </details>
+                <details class="shorthand mb-2">
+                    <summary class="shorthand-label shorthand-item">Elder overload salve (6)</summary>
+                    <summary class="nested-shorthand-item">eos</summary>
+                    <summary class="nested-shorthand-item">esalve</summary>
+                    <summary class="nested-shorthand-item">eldersalve</summary>
+                    <summary class="nested-shorthand-item">elder salve</summary>
+                    <summary class="nested-shorthand-item">elder overload salve</summary>
+                </details>
             </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Super ranging potion (3)</summary>
-                <summary class="nested-shorthand-item">sr</summary>
-                <summary class="nested-shorthand-item">supr</summary>
-                <summary class="nested-shorthand-item">suprng</summary>
-                <summary class="nested-shorthand-item">super ranging</summary>
-            </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Super magic potion (3)</summary>
-                <summary class="nested-shorthand-item">sm</summary>
-                <summary class="nested-shorthand-item">supm</summary>
-                <summary class="nested-shorthand-item">supmag</summary>
-                <summary class="nested-shorthand-item">super magic</summary>
-            </details>
-        </details>
-        <details class="shorthand mb-2">
-            <summary class="shorthand-label">Extremes</summary>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Extreme attack (3)</summary>
-                <summary class="nested-shorthand-item">ea</summary>
-                <summary class="nested-shorthand-item">exatt</summary>
-                <summary class="nested-shorthand-item">exremea</summary>
-                <summary class="nested-shorthand-item">extreme attack</summary>
-            </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Extreme strength (3)</summary>
-                <summary class="nested-shorthand-item ">es</summary>
-                <summary class="nested-shorthand-item">exstr</summary>
-                <summary class="nested-shorthand-item">exremes</summary>
-                <summary class="nested-shorthand-item">extreme strength</summary>
-            </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Extreme defence (3)</summary>
-                <summary class="nested-shorthand-item">ed</summary>
-                <summary class="nested-shorthand-item">exdef</summary>
-                <summary class="nested-shorthand-item">extremed</summary>
-                <summary class="nested-shorthand-item">extreme defence</summary>
-            </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Extreme ranging potion (3)</summary>
-                <summary class="nested-shorthand-item">er</summary>
-                <summary class="nested-shorthand-item">exrng</summary>
-                <summary class="nested-shorthand-item">extremer</summary>
-                <summary class="nested-shorthand-item">extreme ranging</summary>
-            </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Extreme magic potion (3)</summary>
-                <summary class="nested-shorthand-item">em</summary>
-                <summary class="nested-shorthand-item">exmag</summary>
-                <summary class="nested-shorthand-item">extremem</summary>
-                <summary class="nested-shorthand-item">extreme magic</summary>
-            </details>
-        </details>
-        <details>
-            <summary class="shorthand-label">Overloads</summary>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Overload (3)</summary>
-                <summary class="nested-shorthand-item">ovl</summary>
-                <summary class="nested-shorthand-item">overload</summary>
-            </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Supreme overload potion (6)</summary>
-                <summary class="nested-shorthand-item">sovl</summary>
-                <summary class="nested-shorthand-item">supovl</summary>
-                <summary class="nested-shorthand-item">supreme ovl</summary>
-                <summary class="nested-shorthand-item">supreme overload</summary>
-            </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Elder overload potion (6)</summary>
-                <summary class="nested-shorthand-item">eovl</summary>
-                <sumamry class="nested-shorthand-item">elder</sumamry>
-                <summary class="nested-shorthand-item">elderovl</summary>
-                <summary class="nested-shorthand-item">elder ovl</summary>
-                <summary class="nested-shorthand-item">elder overload</summary>
-            </details>
-            <details class="shorthand mb-2">
-                <summary class="shorthand-label shorthand-item">Elder overload salve (6)</summary>
-                <summary class="nested-shorthand-item">eos</summary>
-                <summary class="nested-shorthand-item">esalve</summary>
-                <summary class="nested-shorthand-item">eldersalve</summary>
-                <summary class="nested-shorthand-item">elder salve</summary>
-                <summary class="nested-shorthand-item">elder overload salve</summary>
-            </details>
-        </details>
+        </section>
         
     </div>
 </div>
