--- a/views/results.ejs
+++ b/views/results.ejs
@@ -87,7 +87,7 @@ The last ingredient is dealt with individually, possibly due to bad implementati
 
     </div>
 <div class="d-flex justify-content-center my-3">
-    <a class="btn btn-success" href="/">Search for a new potion</a>
+    <a class="btn btn-success" href="/" id="newSearch">Search for a new potion</a>
 </div>
 <script src="/javascripts/boxesAndButton.js"></script>
 <script src="/javascripts/bootstrapTooltips.js"></script>
