--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <img draggable="false" ondragstart="return false"; src="/images/navbarImg.webp" alt="">
@@ -9,9 +10,9 @@
     </div>
     <div class="collapse navbar-collapse ml-auto d-lg-flex flex-row-reverse" id="navbarSupportedContent">
       <div class="navbar-nav">
-        <a class="nav-link fs-3" href="/" >Home</a>
-        <a class="nav-link fs-3" href="#" data-bs-toggle="modal" data-bs-target="#aboutPotionChain">About</a>   
-        <a class="nav-link fs-3" href="#" data-bs-toggle="modal" data-bs-target="#supportedPotions" href="/" >Supported Potions</a>
+        <a class="nav-link fs-3 text-light" href="/" >Home</a>
+        <a class="nav-link fs-3 text-light" href="#" data-bs-toggle="modal" data-bs-target="#aboutPotionChain">About</a>   
+        <a class="nav-link fs-3 text-light" href="#" data-bs-toggle="modal" data-bs-target="#supportedPotions" href="/" >Supported Potions</a>
       </div>
     </div>
   </div>
@@ -38,15 +39,15 @@
           Therefore primitive ingredients are located in the deepest/rightmost indentation levels, while other non-primitive ingredients (i.e. those which require some other ingredient(s) to be created) are in the shallower/leftmost levels.
         </p>
         <ul style="list-style-type:none; padding:0;" class="border border-dark">
-          <li style="background-color: rgb(0,0,0); color:white;">Depth 1 - rgb(0,0,0)</li>
+          <li style="background-color: rgb(70, 70, 70); color:white;">Depth 1 - rgb(70, 70, 70)</li>
           <li style="background-color: rgb(255, 157, 0); color:white;">Depth 2 - rgb(255, 157, 0)</li>
-          <li style="background-color: rgb(13, 58, 13); color:white;">Depth 3 - rgb(13, 58, 13)</li>
-          <li style="background-color: rgb(160, 151, 71); color:white;">Depth 4 - rgb(160, 151, 71)</li>
-          <li style="background-color: rgb(110, 32, 1); color:white;">Depth 5 - rgb(110, 32, 1)</li>
-          <li style="background-color: rgb(95, 16, 53); color:white;">Depth 6 - rgb(95, 16, 53)</li>
-          <li style="background-color: rgb(6, 144, 144); color:white;">Depth 7 - rgb(6, 144, 144)</li>
-          <li style="background-color: rgb(121, 121, 121); color:white;">Depth 8 - rgb(121, 121, 121)</li>
-          <li style="background-color: rgb(255, 252, 252); color:black;">Depth 9 - rgb(255, 252, 252)</li>
+          <li style="background-color: rgb(23, 102, 23); color:white;">Depth 3 - rgb(23, 102, 23)</li>
+          <li style="background-color: rgb(192, 181, 86); color:white;">Depth 4 - rgb(192, 181, 86)</li>
+          <li style="background-color: rgb(158, 46, 2); color:white;">Depth 5 - rgb(158, 46, 2)</li>
+          <li style="background-color: rgb(139, 25, 78); color:white;">Depth 6 - rgb(139, 25, 78)</li>
+          <li style="background-color: rgb(9, 190, 190); color:white;">Depth 7 - rgb(9, 190, 190)</li>
+          <li style="background-color: rgb(163, 162, 162); color:white;">Depth 8 - rgb(163, 162, 162)</li>
+          <li style="background-color: rgb(255, 255, 255); color:black;">Depth 9 - rgb(255, 255, 255)</li>
         </ul>
         <h4>Changes in version 1.0: </h4>
         <ul>
