--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <img draggable="false" ondragstart="return false"; src="/images/navbarImg.webp" alt="">
-    <p class="mx-3 pt-3 fs-1">Potion Chain</p>
+    <a href="/" class="logo">
+      <img draggable="false" ondragstart="return false"; src="/images/navbarImg.webp" alt="">
+      <p class="mx-3 pt-3 fs-1">Potion Chain</p>
+    </a>
     <div class="mt-3">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,7 +12,6 @@
     </div>
     <div class="collapse navbar-collapse ml-auto d-lg-flex flex-row-reverse" id="navbarSupportedContent">
       <div class="navbar-nav">
-        <a class="nav-link fs-3 text-light" href="/" >Home</a>
         <a class="nav-link fs-3 text-light" href="#" data-bs-toggle="modal" data-bs-target="#aboutPotionChain">About</a>   
         <a class="nav-link fs-3 text-light" href="#" data-bs-toggle="modal" data-bs-target="#supportedPotions" href="/" >Supported Potions</a>
       </div>
